--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -783,8 +783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We summarized the data in terms of the mean of each predictor so that the means of the histograms can be set. The mean of all the predictors for both outcomes were found as well. The predictors with an outcome of 1 and an outcome of 0 had different means with respect to   \n",
-    "We repeated this for the maximum and minimum of each predictor. "
+    "We summarized the data in terms of the mean of each predictor so that the means of the histograms can be set. The mean of all the predictors for both outcomes were found as well. he predictors with an outcome of 1 and an outcome of 0 had different means with respect to each predictors. Lastly, we repeated this for the maximum and minimum of each predictor. "
    ]
   },
   {
@@ -1225,7 +1224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step to our exploratory analysis was to validate the significance of all the predictors present in the dataset. To do this, we visualized the frequency of women with and without diabetes for each predictor, using histograms for intuitive visualization of two possible outcomes. (4). Ggplot and geom_histogram were used (7). Furthermore, by obtaining a mean for women with and without diabetes of each predictor, it was made more clear what their frequencies represented."
+    "The next step to our exploratory analysis was to validate the significance of all the predictors present in the dataset. To do this, we visualized the frequency of women with and without diabetes for each predictor, using histograms for intuitive visualization of two possible outcomes. (4). Ggplot and geom_histogram were used (7). Furthermore, by obtaining a mean for women with and without diabetes of each predictor, it was made more clear what their frequencies represented. "
    ]
   },
   {
