--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1823,7 @@
     "The results obtained by the classification model were of a lower accuracy than expected. Based on our literature research and the exploratory data analysis, we gathered that the predictors we used were significant predictors of diabetes (5, 2).  We expected that since each of the predictors is significant, our model would classify the data with a higher accuracy than achieved: 75.5%. While 75.5% is not a bad accuracy, if we consider that 47/192 values were incorrectly predicted, this could have dire consequences for people who are being wrongly diagnosed.\n",
     "\n",
     "\n",
-    "Further questions on this topic could look into how changing certain aspects of one's lifestyle could affect a diabetes diagnosis and how those changes impact the predictor values. The classification result tells us that these predictors are related to getting a diagnosis of diabetes. Although it is unknown exactly what causes diabetes, it’s proven that diabetes is directly impacted by how the body digests glucose and produces insulin, and such predictors we have chosen reflect that (5). As the data we have analyzed only takes in the target of women o Pima Indian Descent over the age of 21, it may not be representative of other demographics. Future research could look into if these predictors are still as relevant for different demographics (ie. ethnicity and gender). \n"
+    "Further questions on this topic could look into how changing certain aspects of one's lifestyle could affect a diabetes diagnosis and how those changes impact the predictor values. The classification result tells us that these predictors are related to getting a diagnosis of diabetes. Although it is unknown exactly what causes diabetes, it’s proven that diabetes is directly impacted by how the body digests glucose and produces insulin, and such predictors we have chosen reflect that (5). As the data we have analyzed only takes in the target of women of Pima Indian Descent over the age of 21, it may not be representative of other demographics. Future research could look into if these predictors are still as relevant for different demographics (ie. ethnicity, gender and age). \n"
    ]
   },
   {
@@ -1836,15 +1836,29 @@
     "\n",
     "(2) Collier, A., Patrick, A. W., Bell, D., Matthews, D. M., MacIntyre, C. C., Ewing, D. J., & Clarke, B. F. (1989). Relationship of skin thickness to duration of diabetes, glycemic control, and diabetic complications in male IDDM patients. Diabetes Care, 12(5), 309-312. https://doi.org/10.2337/diacare.12.5.309\n",
     "\n",
-    "(3) Diabetes Dataset. (2020, 8 5). Kaggle. Retrieved 3 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set\n",
+    "(3) Diabetes Dataset. (2020, September 5). Kaggle. Retrieved March 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set\n",
     "\n",
     "(4) Government of Canada, Statistics Canada. “5 Data Visualization 5.7 Histogram.” 5.7 Histogram, 2 Sept. 2021, https://www150.statcan.gc.ca/n1/edu/power-pouvoir/ch9/histo/5214822-eng.htm. \n",
     "\n",
-    "(5) Mayo Clinic Staff. (2020, 10 30). Diabetes. Mayo Clinic. Retrieved 3 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444 \n",
+    "(5) Mayo Clinic Staff. (2020, October 30). Diabetes. Mayo Clinic. Retrieved March 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444 \n",
     "\n",
     "(6) Mayo Foundation for Medical Education and Research. (2021, June 25). Diabetes prevention: 5 tips for taking control. Mayo Clinic. Retrieved April 5, 2022, from https://www.mayoclinic.org/diseases-conditions/type-2-diabetes/in-depth/diabetes-prevention/art-20047639\n",
     "\n",
     "(7) Timbers, T., Campbell, T., & Lee, M. (2022). Data Science: A first Introduction. CRC Press. https://datasciencebook.ca/index.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By: Emilie, Amelia, James, Jordan"
    ]
   }
  ],
